gif replaced, transitions added to footer links

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <a href="https://en.wikipedia.org/wiki/Carl_Sagan#/media/File:Cosmic_Calendar.png" target="_blank">Cosmic Calendar</a>, popularized on Cosmos, scales the age of the universe, 13.7 billion years, down to 12 months.
                 </p>
               </div>
-              <div id="gif-and-youtube-link"><iframe id="evo-gif" src='https://gfycat.com/ifr/UnpleasantRashCalf' alt="Evolution Gif" frameborder='0' scrolling='no' width='250px' height='250px' allowfullscreen></iframe>
+              <div id="gif-and-youtube-link" style="display: flex; justify-content: center; align-items: center;"><iframe id="evo-gif" src='https://gifbin.com/bin/012014/1391020227_evolution__from_carl_sagans_cosmos.gif' alt="Evolution Gif" frameborder='0' scrolling='no' width='250px' height='100%' allowfullscreen style="background: black"></iframe>
                 <a id="gif-link" href="https://gfycat.com/unpleasantrashcalf"></a>
                 <a id="evo-youtube-link" href="https://www.youtube.com/watch?v=gZpsVSVRsZk" target="_blank">Full Video</a>
               </div>
